modificacion Franco agregue historial y a tu div le puse form para molestar no cambia nada

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<section class="contacto">
  
- 		<div class="form-consulta">
+ 		<form class="form-consulta" id="formulario">
 		<label>Titulo:
 			<input id=titulo placeholder="Titulo" class="campo-form">
 		</label>
@@ -43,7 +43,7 @@
 		</label>
 
 		<button type="button" id='boton' class="btn-form">Buscar</button>
-		</div>
+		</form> 
 	</section>
 
 	<div id="resultado" class="container"></div>
@@ -57,6 +57,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="jquery-3.4.1.min.js"></script>
 <script src="js/min.js"></script>
+
 
 
 </body>
