--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Formulario</title>
-<link href="estilo.css" rel="stylesheet">
+<link href="css/estilo.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400' rel='stylesheet' type='text/css'>
 
 </head>
