resuelvo la redireccion del formulario y mensaje de envio

--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
 	<form class="form-consulta" id="formulario">
 
 		<label>Email emisor: <span>*</span>
-		<input type="url" name="url" placeholder="Email" class="campo-form" id="urlf" required>
+		<input type="email" name="email" placeholder="Email" class="campo-form" id="urlf" required>
 		</label>
 		
 		<label>Nombre y apellido:
