--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="headerHome">
 		<div class="container">
-			<a href="index.html"><img src="img/logo.jpg" alt="Logo del ejercicio 4"></a>
+			<a href="Inicio.html"><img class="imagen" src="img/logo.jpg"></a>
 
 		</div>
 	</header>
@@ -18,31 +18,26 @@
 	<nav>
 		<div class="containerweb">
 			<a href="index.html">Inicio</a>
-			<a href="About.html">Sobre nosotros</a>
+			<a href="About.html">Contacto</a>
 		</div>
 	</nav>
 
 	<section>
-		<h2>Quiénes somos</h2>
+		<h2>IFORMACIÓN</h2>
 	</section>
 
 	<section class="padre" class="padre1">
-		<p class="columna" class="pstyle">Somos un grupo de estudiantes de la Universidad Tecnológica Nacional, Facultad Regional La Plata, que tienen el objetivo de ayudar a la gente con herramientas digitales.</p>
+		<p class="columna" class="pstyle">Estudiante de la Universidad Tecnológica Nacional, Facultad Regional La Plata</p>
 		<img src="img/study.jpg" alt="foto de libros" class="imgAbout" class="columna" class="animated infinite bounce delay-2s">
 	</section>
 
 	<section class="padre" class="padre2">
 		
 		<img src="img/books.jpg" alt="foto de libros" class="imgAbout" class="columna">
-		<p class="columna" class="pstyle"> A través de este servicio buscamos que los interesados puedan obtener sobre bibliografía de su interés la información necesaria para poder tomar la decisión de si adquirirlo o no.</p>
+		<p class="columna" class="pstyle"> Trabajo Práctico N1 
+		 TyGweb.</p>
 	</section>
-	
-	<h2>Dónde nos encontramos</h2>
-	<section class="sectionMap">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.347307547186!2d-57.95780313349353!3d-34.92282568003794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e62dd769b9d7%3A0x8e5a62b28764b5ef!2sCatedral%20de%20La%20Plata!5e0!3m2!1ses-419!2sar!4v1587860382728!5m2!1ses-419!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="sectionMap"></iframe>
-	</section>
-
-	<footer>Aplicaciones móviles 2020</footer>
+	<footer>TyGweb 03/06/2020</footer>
 </body>
 </html>
 
