trabajo casi finalizado, me falta el css de las frases

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header class="headerHome">
 		<div class="containerlogo">
-			<a href="inicio.html"><img class="imagen" src="img/logo.jpg" alt="Logo del ejercicio 4"><p class="costado"><span>TP1</span> - Franco Cortina Ugolini</p></a>
+			<a href="inicio.html"><img class="imagen" src="img/logo.jpg"><p class="costado"><span>TP1</span> - Franco Cortina Ugolini</p></a>
 
 		</div>
 	</header>
