--- a/inicio.html
+++ b/inicio.html
@@ -7,6 +7,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="jquery-3.4.1.min.js"></script>
 	<script src="js/min.js"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/styles.css">
 
